[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
regex = "1.11.1"

# day 1
[[bin]]
name = "day1-diff"
path = "src/bin/day1/diff.rs"

[[bin]]
name = "day1-sim"
path = "src/bin/day1/sim.rs"

# day 2
[[bin]]
name = "day2-safecount"
path = "src/bin/day2/safecount.rs"
