[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent"
path = "src/lib.rs"

[dependencies]
regex = "1.11.1"

# day 1
[[bin]]
name = "day1-diff"
path = "src/bin/day1/diff.rs"

[[bin]]
name = "day1-sim"
path = "src/bin/day1/sim.rs"

# day 2
[[bin]]
name = "day2-safecount"
path = "src/bin/day2/safecount.rs"

[[bin]]
name = "day2-safecount-dampened"
path = "src/bin/day2/safecount-dampened.rs"

# day 3
[[bin]]
name = "day3-multiply"
path = "src/bin/day3/multiply.rs"

[[bin]]
name = "day3-multiply-cond"
path = "src/bin/day3/cond_multiply.rs"

# day 4
[[bin]]
name = "day4-1"
path = "src/bin/day4/1.rs"

#[[bin]]
#name = "day4-2"
#path = "src/bin/day4/2.rs"
